--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -46,12 +46,11 @@
     opacity: 0.5;
     resize: none;
 
-    &:nth-last-child(3) {
-      margin-bottom: 90px;
-    }
-
     &:nth-last-child(2) {
       margin-bottom: 30px;
+      &::placeholder {
+        padding-top: 115px;
+      }
 
       @media (min-width: 992px) {
         margin-bottom: 40px;
