--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -72,7 +72,7 @@
       padding: 150px 0 20px;
     }
 
-    @media (min-width: 1332px) {
+    @media (min-width: 1350px) {
       padding: 100px 0 20px;
       font-size: 160px;
       line-height: 177px;
@@ -95,6 +95,7 @@
     height: 45px;
     font-size: 16px;
     line-height: 41px;
+    text-decoration: none;
   }
 
   &__nav {
