--- a/src/styles/blocks/header/number.scss
+++ b/src/styles/blocks/header/number.scss
@@ -15,7 +15,7 @@
     line-height: 19px;
     color: $c-croissant;
     cursor: pointer;
-    @include hover(transform, scale(1.2));
+    transition: 0.3s;
 
     @media (min-width: 768px) {
       margin: 0 0 14px;
